# serializer version: 1
# name: TestAPICommunes.test_commune_collectivite_porteuse[approved_procedure]
  list([
    dict({
      'annee_cog': '2024',
      'code_insee': '30032',
      'collectivite_porteuse': '253000020',
      'com_code_departement': '30',
      'com_code_region': '76',
      'com_nom': 'Beaucaire',
      'com_nom_departement': 'Gard',
      'com_nom_region': 'Occitanie',
      'com_nouvelle': 'False',
      'cp_code_departement': '30',
      'cp_code_insee': '',
      'cp_code_region': '76',
      'cp_lib_region': 'Occitanie',
      'cp_nom': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'cp_nom_departement': 'Gard',
      'cp_siren': '253000020',
      'cp_type': 'CC',
      'epci_departement': '',
      'epci_dept': '',
      'epci_nom': '',
      'epci_reg': '',
      'epci_region': '',
      'epci_siren': '',
      'epci_type': '',
      'pa_annee_approbation': '2025',
      'pa_annee_prescription': '',
      'pa_cout_sst_ht': '',
      'pa_cout_sst_ttc': '',
      'pa_date_approbation': '2025-02-02',
      'pa_date_arret_projet': '',
      'pa_date_executoire': '',
      'pa_date_pac': '',
      'pa_date_pac_comp': '',
      'pa_date_prescription': '',
      'pa_delai_approbation': '',
      'pa_docurba_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'pa_nb_communes': '1',
      'pa_nom_sst': '',
      'pa_num_procedure_sudocuh': '',
      'pa_objets': '',
      'pa_pdu_obligatoire': '',
      'pa_pdu_tient_lieu': 'False',
      'pa_plui_valant_scot': '',
      'pa_pluih': 'False',
      'pa_sectoriel': 'False',
      'pa_type_document': 'PLU',
      'pa_type_procedure': 'Élaboration',
      'pc_cout_sst_ht': '',
      'pc_cout_sst_ttc': '',
      'pc_date_arret_projet': '',
      'pc_date_pac': '',
      'pc_date_pac_comp': '',
      'pc_date_prescription': '',
      'pc_docurba_id': '',
      'pc_nb_communes': '',
      'pc_nom_sst': '',
      'pc_num_procedure_sudocuh': '',
      'pc_objets': '',
      'pc_pdu_obligatoire': '',
      'pc_pdu_tient_lieu': '',
      'pc_plui_valant_scot': '',
      'pc_pluih': '',
      'pc_sectoriel': '',
      'pc_type_document': '',
      'pc_type_procedure': '',
      'plan_code_etat_complet': '3499',
      'plan_code_etat_simplifie': '39',
      'plan_libelle_code_etat_complet': 'PLU approuvé - aucune procédure en cours - Compétence EPCI',
      'plan_libelle_code_etat_simplifie': 'PLU approuvé',
    }),
  ])
# ---
# name: TestAPICommunes.test_commune_collectivite_porteuse[no_procedure]
  list([
    dict({
      'annee_cog': '2024',
      'code_insee': '30032',
      'collectivite_porteuse': '30032',
      'com_code_departement': '30',
      'com_code_region': '76',
      'com_nom': 'Beaucaire',
      'com_nom_departement': 'Gard',
      'com_nom_region': 'Occitanie',
      'com_nouvelle': 'False',
      'cp_code_departement': '30',
      'cp_code_insee': '30032',
      'cp_code_region': '76',
      'cp_lib_region': 'Occitanie',
      'cp_nom': 'Beaucaire',
      'cp_nom_departement': 'Gard',
      'cp_siren': '',
      'cp_type': 'COM',
      'epci_departement': '',
      'epci_dept': '',
      'epci_nom': '',
      'epci_reg': '',
      'epci_region': '',
      'epci_siren': '',
      'epci_type': '',
      'pa_annee_approbation': '',
      'pa_annee_prescription': '',
      'pa_cout_sst_ht': '',
      'pa_cout_sst_ttc': '',
      'pa_date_approbation': '',
      'pa_date_arret_projet': '',
      'pa_date_executoire': '',
      'pa_date_pac': '',
      'pa_date_pac_comp': '',
      'pa_date_prescription': '',
      'pa_delai_approbation': '',
      'pa_docurba_id': '',
      'pa_nb_communes': '',
      'pa_nom_sst': '',
      'pa_num_procedure_sudocuh': '',
      'pa_objets': '',
      'pa_pdu_obligatoire': '',
      'pa_pdu_tient_lieu': '',
      'pa_plui_valant_scot': '',
      'pa_pluih': '',
      'pa_sectoriel': '',
      'pa_type_document': '',
      'pa_type_procedure': '',
      'pc_cout_sst_ht': '',
      'pc_cout_sst_ttc': '',
      'pc_date_arret_projet': '',
      'pc_date_pac': '',
      'pc_date_pac_comp': '',
      'pc_date_prescription': '',
      'pc_docurba_id': '',
      'pc_nb_communes': '',
      'pc_nom_sst': '',
      'pc_num_procedure_sudocuh': '',
      'pc_objets': '',
      'pc_pdu_obligatoire': '',
      'pc_pdu_tient_lieu': '',
      'pc_plui_valant_scot': '',
      'pc_pluih': '',
      'pc_sectoriel': '',
      'pc_type_document': '',
      'pc_type_procedure': '',
      'plan_code_etat_complet': '9999',
      'plan_code_etat_simplifie': '99',
      'plan_libelle_code_etat_complet': 'RNU - aucune procédure en cours',
      'plan_libelle_code_etat_simplifie': 'RNU',
    }),
  ])
# ---
# name: TestAPICommunes.test_commune_collectivite_porteuse[ongoing_procedure]
  list([
    dict({
      'annee_cog': '2024',
      'code_insee': '30032',
      'collectivite_porteuse': '253000020',
      'com_code_departement': '30',
      'com_code_region': '76',
      'com_nom': 'Beaucaire',
      'com_nom_departement': 'Gard',
      'com_nom_region': 'Occitanie',
      'com_nouvelle': 'False',
      'cp_code_departement': '30',
      'cp_code_insee': '',
      'cp_code_region': '76',
      'cp_lib_region': 'Occitanie',
      'cp_nom': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'cp_nom_departement': 'Gard',
      'cp_siren': '253000020',
      'cp_type': 'CC',
      'epci_departement': '',
      'epci_dept': '',
      'epci_nom': '',
      'epci_reg': '',
      'epci_region': '',
      'epci_siren': '',
      'epci_type': '',
      'pa_annee_approbation': '',
      'pa_annee_prescription': '',
      'pa_cout_sst_ht': '',
      'pa_cout_sst_ttc': '',
      'pa_date_approbation': '',
      'pa_date_arret_projet': '',
      'pa_date_executoire': '',
      'pa_date_pac': '',
      'pa_date_pac_comp': '',
      'pa_date_prescription': '',
      'pa_delai_approbation': '',
      'pa_docurba_id': '',
      'pa_nb_communes': '',
      'pa_nom_sst': '',
      'pa_num_procedure_sudocuh': '',
      'pa_objets': '',
      'pa_pdu_obligatoire': '',
      'pa_pdu_tient_lieu': '',
      'pa_plui_valant_scot': '',
      'pa_pluih': '',
      'pa_sectoriel': '',
      'pa_type_document': '',
      'pa_type_procedure': '',
      'pc_cout_sst_ht': '',
      'pc_cout_sst_ttc': '',
      'pc_date_arret_projet': '',
      'pc_date_pac': '',
      'pc_date_pac_comp': '',
      'pc_date_prescription': '2025-02-02',
      'pc_docurba_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'pc_nb_communes': '1',
      'pc_nom_sst': '',
      'pc_num_procedure_sudocuh': '',
      'pc_objets': '',
      'pc_pdu_obligatoire': '',
      'pc_pdu_tient_lieu': 'False',
      'pc_plui_valant_scot': '',
      'pc_pluih': 'False',
      'pc_sectoriel': 'False',
      'pc_type_document': 'PLU',
      'pc_type_procedure': 'Élaboration',
      'plan_code_etat_complet': '9934',
      'plan_code_etat_simplifie': '93',
      'plan_libelle_code_etat_complet': 'RNU - élaboration PLU - Compétence EPCI',
      'plan_libelle_code_etat_simplifie': 'PLU en élaboration',
    }),
  ])
# ---
# name: TestAPICommunes.test_nominal
  list([
    dict({
      'annee_cog': '2024',
      'code_insee': '30032',
      'collectivite_porteuse': '253000020',
      'com_code_departement': '30',
      'com_code_region': '76',
      'com_nom': 'Beaucaire',
      'com_nom_departement': 'Gard',
      'com_nom_region': 'Occitanie',
      'com_nouvelle': 'False',
      'cp_code_departement': '30',
      'cp_code_insee': '',
      'cp_code_region': '76',
      'cp_lib_region': 'Occitanie',
      'cp_nom': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'cp_nom_departement': 'Gard',
      'cp_siren': '253000020',
      'cp_type': 'SMO',
      'epci_departement': 'Gard',
      'epci_dept': '30',
      'epci_nom': "CC Beaucaire Terre d'Argence",
      'epci_reg': '76',
      'epci_region': 'Occitanie',
      'epci_siren': '243000585',
      'epci_type': 'CC',
      'pa_annee_approbation': '2026',
      'pa_annee_prescription': '2025',
      'pa_cout_sst_ht': '',
      'pa_cout_sst_ttc': '',
      'pa_date_approbation': '2026-07-06',
      'pa_date_arret_projet': '2025-05-05',
      'pa_date_executoire': '2025-04-04',
      'pa_date_pac': '2025-02-02',
      'pa_date_pac_comp': '2025-03-03',
      'pa_date_prescription': '2025-01-01',
      'pa_delai_approbation': '551',
      'pa_docurba_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f10',
      'pa_nb_communes': '1',
      'pa_nom_sst': '',
      'pa_num_procedure_sudocuh': '',
      'pa_objets': '',
      'pa_pdu_obligatoire': '',
      'pa_pdu_tient_lieu': 'False',
      'pa_plui_valant_scot': '',
      'pa_pluih': 'False',
      'pa_sectoriel': 'False',
      'pa_type_document': 'PLU',
      'pa_type_procedure': 'Élaboration',
      'pc_cout_sst_ht': '',
      'pc_cout_sst_ttc': '',
      'pc_date_arret_projet': '2025-06-06',
      'pc_date_pac': '2025-07-07',
      'pc_date_pac_comp': '2025-08-08',
      'pc_date_prescription': '2026-05-05',
      'pc_docurba_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'pc_nb_communes': '1',
      'pc_nom_sst': '',
      'pc_num_procedure_sudocuh': '',
      'pc_objets': '',
      'pc_pdu_obligatoire': '',
      'pc_pdu_tient_lieu': 'False',
      'pc_plui_valant_scot': '',
      'pc_pluih': 'False',
      'pc_sectoriel': 'False',
      'pc_type_document': 'PLU',
      'pc_type_procedure': 'Élaboration',
      'plan_code_etat_complet': '3434',
      'plan_code_etat_simplifie': '33',
      'plan_libelle_code_etat_complet': 'PLU approuvé - révision de PLU - Compétence EPCI',
      'plan_libelle_code_etat_simplifie': 'PLU en révision',
    }),
  ])
# ---
# name: TestAPIPerimetres.test_communes_types[COMA]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COMA',
      'opposable': 'False',
      'procedure_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'type_document': 'PLU',
    }),
  ])
# ---
# name: TestAPIPerimetres.test_communes_types[COMD]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COMD',
      'opposable': 'False',
      'procedure_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'type_document': 'PLU',
    }),
  ])
# ---
# name: TestAPIPerimetres.test_communes_types[COM]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'type_document': 'PLU',
    }),
  ])
# ---
# name: TestAPIPerimetres.test_nominal[one_procedure-one_commune]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '2cd65b57-7027-4aa5-8d19-5e1baf8d6f07',
      'type_document': 'PLU',
    }),
  ])
# ---
# name: TestAPIPerimetres.test_nominal[one_procedure-several_communes]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '2cd65b57-7027-4aa5-8d19-5e1baf8d6f07',
      'type_document': 'PLU',
    }),
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30135',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '2cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'type_document': 'PLU',
    }),
  ])
# ---
# name: TestAPIPerimetres.test_nominal[several_procedures-one_commune]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '2cd65b57-7027-4aa5-8d19-5e1baf8d6f07',
      'type_document': 'PLU',
    }),
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '2cd65b57-7027-4aa5-8d19-5e1baf8d6f08',
      'type_document': 'PLU',
    }),
  ])
# ---
# name: TestAPIPerimetres.test_nominal[several_procedures-several_communes]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '2cd65b57-7027-4aa5-8d19-5e1baf8d6f07',
      'type_document': 'PLU',
    }),
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '2cd65b57-7027-4aa5-8d19-5e1baf8d6f08',
      'type_document': 'PLU',
    }),
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30135',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '2cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'type_document': 'PLU',
    }),
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30135',
      'collectivite_type': 'COM',
      'opposable': 'False',
      'procedure_id': '2cd65b57-7027-4aa5-8d19-5e1baf8d6f10',
      'type_document': 'PLU',
    }),
  ])
# ---
# name: TestAPIScots.test_nominal
  list([
    dict({
      'annee_cog': '2024',
      'pa_annee_approbation': '2026',
      'pa_date_approbation': '2026-01-01',
      'pa_date_arret_projet': '2025-11-11',
      'pa_date_fin_echeance': '',
      'pa_date_prescription': '2025-09-11',
      'pa_date_publication_perimetre': '2025-10-11',
      'pa_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f10',
      'pa_nom_schema': "Élaboration SCOT Syndicat mixte d'équipement de la commune de Beaucaire",
      'pa_nombre_communes': '1',
      'pa_noserie_procedure': '',
      'pa_objets': '',
      'pa_scot_interdepartement': 'False',
      'pc_date_arret_projet': '2025-12-11',
      'pc_date_prescription': '2025-10-10',
      'pc_date_publication_perimetre': '2025-11-11',
      'pc_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'pc_nom_schema': 'Élaboration du PLU de Nantes',
      'pc_nombre_communes': '1',
      'pc_noserie_procedure': '',
      'pc_objets': '',
      'pc_proc_elaboration_revision': 'Élaboration',
      'pc_scot_interdepartement': 'False',
      'scot_code_departement': '30',
      'scot_code_region': '76',
      'scot_code_type_collectivite': 'SMO',
      'scot_codecollectivite': '253000020',
      'scot_lib_departement': 'Gard',
      'scot_libelle_region': 'Occitanie',
      'scot_nom_collectivite': "Syndicat mixte d'équipement de la commune de Beaucaire",
    }),
  ])
# ---
# name: TestApiPerimetresAndCommunes.test_is_intercommunal[api_communes]
  list([
    dict({
      'annee_cog': '2024',
      'code_insee': '30032',
      'collectivite_porteuse': '30032',
      'com_code_departement': '30',
      'com_code_region': '76',
      'com_nom': 'Beaucaire',
      'com_nom_departement': 'Gard',
      'com_nom_region': 'Occitanie',
      'com_nouvelle': 'False',
      'cp_code_departement': '30',
      'cp_code_insee': '30032',
      'cp_code_region': '76',
      'cp_lib_region': 'Occitanie',
      'cp_nom': 'Beaucaire',
      'cp_nom_departement': 'Gard',
      'cp_siren': '',
      'cp_type': 'COM',
      'epci_departement': '',
      'epci_dept': '',
      'epci_nom': '',
      'epci_reg': '',
      'epci_region': '',
      'epci_siren': '',
      'epci_type': '',
      'pa_annee_approbation': '',
      'pa_annee_prescription': '',
      'pa_cout_sst_ht': '',
      'pa_cout_sst_ttc': '',
      'pa_date_approbation': '',
      'pa_date_arret_projet': '',
      'pa_date_executoire': '',
      'pa_date_pac': '',
      'pa_date_pac_comp': '',
      'pa_date_prescription': '',
      'pa_delai_approbation': '',
      'pa_docurba_id': '',
      'pa_nb_communes': '',
      'pa_nom_sst': '',
      'pa_num_procedure_sudocuh': '',
      'pa_objets': '',
      'pa_pdu_obligatoire': '',
      'pa_pdu_tient_lieu': '',
      'pa_plui_valant_scot': '',
      'pa_pluih': '',
      'pa_sectoriel': '',
      'pa_type_document': '',
      'pa_type_procedure': '',
      'pc_cout_sst_ht': '',
      'pc_cout_sst_ttc': '',
      'pc_date_arret_projet': '',
      'pc_date_pac': '',
      'pc_date_pac_comp': '',
      'pc_date_prescription': '',
      'pc_docurba_id': '',
      'pc_nb_communes': '',
      'pc_nom_sst': '',
      'pc_num_procedure_sudocuh': '',
      'pc_objets': '',
      'pc_pdu_obligatoire': '',
      'pc_pdu_tient_lieu': '',
      'pc_plui_valant_scot': '',
      'pc_pluih': '',
      'pc_sectoriel': '',
      'pc_type_document': '',
      'pc_type_procedure': '',
      'plan_code_etat_complet': '9999',
      'plan_code_etat_simplifie': '99',
      'plan_libelle_code_etat_complet': 'RNU - aucune procédure en cours',
      'plan_libelle_code_etat_simplifie': 'RNU',
    }),
    dict({
      'annee_cog': '2024',
      'code_insee': '30135',
      'collectivite_porteuse': '253000020',
      'com_code_departement': '30',
      'com_code_region': '76',
      'com_nom': 'Jonquières-Saint-Vincent',
      'com_nom_departement': 'Gard',
      'com_nom_region': 'Occitanie',
      'com_nouvelle': 'False',
      'cp_code_departement': '30',
      'cp_code_insee': '',
      'cp_code_region': '76',
      'cp_lib_region': 'Occitanie',
      'cp_nom': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'cp_nom_departement': 'Gard',
      'cp_siren': '253000020',
      'cp_type': 'SMO',
      'epci_departement': '',
      'epci_dept': '',
      'epci_nom': '',
      'epci_reg': '',
      'epci_region': '',
      'epci_siren': '',
      'epci_type': '',
      'pa_annee_approbation': '2024',
      'pa_annee_prescription': '',
      'pa_cout_sst_ht': '',
      'pa_cout_sst_ttc': '',
      'pa_date_approbation': '2024-06-06',
      'pa_date_arret_projet': '',
      'pa_date_executoire': '',
      'pa_date_pac': '',
      'pa_date_pac_comp': '',
      'pa_date_prescription': '',
      'pa_delai_approbation': '',
      'pa_docurba_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'pa_nb_communes': '2',
      'pa_nom_sst': '',
      'pa_num_procedure_sudocuh': '',
      'pa_objets': '',
      'pa_pdu_obligatoire': '',
      'pa_pdu_tient_lieu': 'False',
      'pa_plui_valant_scot': '',
      'pa_pluih': 'True',
      'pa_sectoriel': 'False',
      'pa_type_document': 'PLUiH',
      'pa_type_procedure': 'Élaboration',
      'pc_cout_sst_ht': '',
      'pc_cout_sst_ttc': '',
      'pc_date_arret_projet': '',
      'pc_date_pac': '',
      'pc_date_pac_comp': '',
      'pc_date_prescription': '',
      'pc_docurba_id': '',
      'pc_nb_communes': '',
      'pc_nom_sst': '',
      'pc_num_procedure_sudocuh': '',
      'pc_objets': '',
      'pc_pdu_obligatoire': '',
      'pc_pdu_tient_lieu': '',
      'pc_plui_valant_scot': '',
      'pc_pluih': '',
      'pc_sectoriel': '',
      'pc_type_document': '',
      'pc_type_procedure': '',
      'plan_code_etat_complet': '3299',
      'plan_code_etat_simplifie': '39',
      'plan_libelle_code_etat_complet': 'PLU-I approuvé - aucune procédure en cours',
      'plan_libelle_code_etat_simplifie': 'PLU approuvé',
    }),
    dict({
      'annee_cog': '2024',
      'code_insee': '30189',
      'collectivite_porteuse': '253000020',
      'com_code_departement': '30',
      'com_code_region': '76',
      'com_nom': 'Nîmes',
      'com_nom_departement': 'Gard',
      'com_nom_region': 'Occitanie',
      'com_nouvelle': 'False',
      'cp_code_departement': '30',
      'cp_code_insee': '',
      'cp_code_region': '76',
      'cp_lib_region': 'Occitanie',
      'cp_nom': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'cp_nom_departement': 'Gard',
      'cp_siren': '253000020',
      'cp_type': 'SMO',
      'epci_departement': '',
      'epci_dept': '',
      'epci_nom': '',
      'epci_reg': '',
      'epci_region': '',
      'epci_siren': '',
      'epci_type': '',
      'pa_annee_approbation': '2024',
      'pa_annee_prescription': '',
      'pa_cout_sst_ht': '',
      'pa_cout_sst_ttc': '',
      'pa_date_approbation': '2024-06-06',
      'pa_date_arret_projet': '',
      'pa_date_executoire': '',
      'pa_date_pac': '',
      'pa_date_pac_comp': '',
      'pa_date_prescription': '',
      'pa_delai_approbation': '',
      'pa_docurba_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'pa_nb_communes': '2',
      'pa_nom_sst': '',
      'pa_num_procedure_sudocuh': '',
      'pa_objets': '',
      'pa_pdu_obligatoire': '',
      'pa_pdu_tient_lieu': 'False',
      'pa_plui_valant_scot': '',
      'pa_pluih': 'True',
      'pa_sectoriel': 'False',
      'pa_type_document': 'PLUiH',
      'pa_type_procedure': 'Élaboration',
      'pc_cout_sst_ht': '',
      'pc_cout_sst_ttc': '',
      'pc_date_arret_projet': '',
      'pc_date_pac': '',
      'pc_date_pac_comp': '',
      'pc_date_prescription': '',
      'pc_docurba_id': '',
      'pc_nb_communes': '',
      'pc_nom_sst': '',
      'pc_num_procedure_sudocuh': '',
      'pc_objets': '',
      'pc_pdu_obligatoire': '',
      'pc_pdu_tient_lieu': '',
      'pc_plui_valant_scot': '',
      'pc_pluih': '',
      'pc_sectoriel': '',
      'pc_type_document': '',
      'pc_type_procedure': '',
      'plan_code_etat_complet': '3299',
      'plan_code_etat_simplifie': '39',
      'plan_libelle_code_etat_complet': 'PLU-I approuvé - aucune procédure en cours',
      'plan_libelle_code_etat_simplifie': 'PLU approuvé',
    }),
  ])
# ---
# name: TestApiPerimetresAndCommunes.test_is_intercommunal[api_perimetres]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30135',
      'collectivite_type': 'COM',
      'opposable': 'True',
      'procedure_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'type_document': 'PLUiH',
    }),
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30189',
      'collectivite_type': 'COM',
      'opposable': 'True',
      'procedure_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'type_document': 'PLUiH',
    }),
  ])
# ---
# name: TestApiPerimetresAndCommunes.test_is_not_intercommunal[api_communes]
  list([
    dict({
      'annee_cog': '2024',
      'code_insee': '30032',
      'collectivite_porteuse': '253000020',
      'com_code_departement': '30',
      'com_code_region': '76',
      'com_nom': 'Beaucaire',
      'com_nom_departement': 'Gard',
      'com_nom_region': 'Occitanie',
      'com_nouvelle': 'False',
      'cp_code_departement': '30',
      'cp_code_insee': '',
      'cp_code_region': '76',
      'cp_lib_region': 'Occitanie',
      'cp_nom': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'cp_nom_departement': 'Gard',
      'cp_siren': '253000020',
      'cp_type': 'SMO',
      'epci_departement': '',
      'epci_dept': '',
      'epci_nom': '',
      'epci_reg': '',
      'epci_region': '',
      'epci_siren': '',
      'epci_type': '',
      'pa_annee_approbation': '2024',
      'pa_annee_prescription': '',
      'pa_cout_sst_ht': '',
      'pa_cout_sst_ttc': '',
      'pa_date_approbation': '2024-06-06',
      'pa_date_arret_projet': '',
      'pa_date_executoire': '',
      'pa_date_pac': '',
      'pa_date_pac_comp': '',
      'pa_date_prescription': '',
      'pa_delai_approbation': '',
      'pa_docurba_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'pa_nb_communes': '1',
      'pa_nom_sst': '',
      'pa_num_procedure_sudocuh': '',
      'pa_objets': '',
      'pa_pdu_obligatoire': '',
      'pa_pdu_tient_lieu': 'False',
      'pa_plui_valant_scot': '',
      'pa_pluih': 'False',
      'pa_sectoriel': 'False',
      'pa_type_document': 'PLU',
      'pa_type_procedure': 'Élaboration',
      'pc_cout_sst_ht': '',
      'pc_cout_sst_ttc': '',
      'pc_date_arret_projet': '',
      'pc_date_pac': '',
      'pc_date_pac_comp': '',
      'pc_date_prescription': '',
      'pc_docurba_id': '',
      'pc_nb_communes': '',
      'pc_nom_sst': '',
      'pc_num_procedure_sudocuh': '',
      'pc_objets': '',
      'pc_pdu_obligatoire': '',
      'pc_pdu_tient_lieu': '',
      'pc_plui_valant_scot': '',
      'pc_pluih': '',
      'pc_sectoriel': '',
      'pc_type_document': '',
      'pc_type_procedure': '',
      'plan_code_etat_complet': '3499',
      'plan_code_etat_simplifie': '39',
      'plan_libelle_code_etat_complet': 'PLU approuvé - aucune procédure en cours - Compétence EPCI',
      'plan_libelle_code_etat_simplifie': 'PLU approuvé',
    }),
  ])
# ---
# name: TestApiPerimetresAndCommunes.test_is_not_intercommunal[api_perimetres]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COM',
      'opposable': 'True',
      'procedure_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'type_document': 'PLU',
    }),
  ])
# ---
# name: TestApiPerimetresAndCommunes.test_is_not_plu_like[api_communes]
  list([
    dict({
      'annee_cog': '2024',
      'code_insee': '30032',
      'collectivite_porteuse': '253000020',
      'com_code_departement': '30',
      'com_code_region': '76',
      'com_nom': 'Beaucaire',
      'com_nom_departement': 'Gard',
      'com_nom_region': 'Occitanie',
      'com_nouvelle': 'False',
      'cp_code_departement': '30',
      'cp_code_insee': '',
      'cp_code_region': '76',
      'cp_lib_region': 'Occitanie',
      'cp_nom': "Syndicat mixte d'équipement de la commune de Beaucaire",
      'cp_nom_departement': 'Gard',
      'cp_siren': '253000020',
      'cp_type': 'SMO',
      'epci_departement': '',
      'epci_dept': '',
      'epci_nom': '',
      'epci_reg': '',
      'epci_region': '',
      'epci_siren': '',
      'epci_type': '',
      'pa_annee_approbation': '2024',
      'pa_annee_prescription': '',
      'pa_cout_sst_ht': '',
      'pa_cout_sst_ttc': '',
      'pa_date_approbation': '2024-06-06',
      'pa_date_arret_projet': '',
      'pa_date_executoire': '',
      'pa_date_pac': '',
      'pa_date_pac_comp': '',
      'pa_date_prescription': '',
      'pa_delai_approbation': '',
      'pa_docurba_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'pa_nb_communes': '1',
      'pa_nom_sst': '',
      'pa_num_procedure_sudocuh': '',
      'pa_objets': '',
      'pa_pdu_obligatoire': '',
      'pa_pdu_tient_lieu': 'False',
      'pa_plui_valant_scot': '',
      'pa_pluih': 'False',
      'pa_sectoriel': 'False',
      'pa_type_document': 'CC',
      'pa_type_procedure': 'Élaboration',
      'pc_cout_sst_ht': '',
      'pc_cout_sst_ttc': '',
      'pc_date_arret_projet': '',
      'pc_date_pac': '',
      'pc_date_pac_comp': '',
      'pc_date_prescription': '',
      'pc_docurba_id': '',
      'pc_nb_communes': '',
      'pc_nom_sst': '',
      'pc_num_procedure_sudocuh': '',
      'pc_objets': '',
      'pc_pdu_obligatoire': '',
      'pc_pdu_tient_lieu': '',
      'pc_plui_valant_scot': '',
      'pc_pluih': '',
      'pc_sectoriel': '',
      'pc_type_document': '',
      'pc_type_procedure': '',
      'plan_code_etat_complet': '1499',
      'plan_code_etat_simplifie': '19',
      'plan_libelle_code_etat_complet': 'CC approuvée - aucune procédure en cours - Compétence EPCI',
      'plan_libelle_code_etat_simplifie': 'CC approuvée',
    }),
  ])
# ---
# name: TestApiPerimetresAndCommunes.test_is_not_plu_like[api_perimetres]
  list([
    dict({
      'annee_cog': '2024',
      'collectivite_code': '30032',
      'collectivite_type': 'COM',
      'opposable': 'True',
      'procedure_id': '1cd65b57-7027-4aa5-8d19-5e1baf8d6f09',
      'type_document': 'CC',
    }),
  ])
# ---
